--- a/package.json
+++ b/package.json
@@ -3,36 +3,63 @@
   "version": "1.0.0",
   "description": "Handling sample authorization in nodejs express server using jwt, passport, mongoose and mongodb",
   "main": "app.js",
-  "author": "Vladimirbr",
+  "author": "Vladimir Brum",
   "license": "ISC",
   "scripts": {
-    "start": "node ./bin/start",
-    "dev": "nodemon ./bin/start"
+    "start": "node dist/start.js",
+    "dev": "nodemon src/start.ts",
+    "build": "tsc --project ./",
+    "lint": "eslint . --ext .ts",
+    "test": "mocha -r ts-node/register test/*.spec.ts"
   },
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.2.0",
-    "helmet-csp": "^3.2.0",
+    "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "helmet": "^4.4.1",
+    "helmet-csp": "^3.3.1",
     "hpp": "^0.2.3",
-    "http-errors": "^1.8.0",
+    "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.5",
+    "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1",
+    "passport-local-mongoose": "^6.1.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "nodemon": "^2.0.6"
+    "@types/chai": "^4.2.15",
+    "@types/chai-http": "^4.2.0",
+    "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/express-mongo-sanitize": "^1.3.2",
+    "@types/hpp": "^0.2.1",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mocha": "^8.2.1",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.30",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.4",
+    "@types/passport-local-mongoose": "^4.0.13",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "mocha": "^8.3.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   },
   "repository": {
     "type": "git",
