--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "start": "node dist/start.js",
-    "dev": "nodemon src/start.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc --project ./",
     "lint": "eslint . --ext .ts",
     "test": "mocha -r ts-node/register test/*.spec.ts"
