--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-jwt-passport-local-mongoose-winston",
   "version": "1.0.0",
   "description": "Handling sample authorization in nodejs express server using jwt, passport, mongoose and mongodb",
-  "main": "app.js",
+  "main": "index.js",
   "author": "Vladimir Brum",
   "license": "ISC",
   "scripts": {
@@ -13,9 +13,11 @@
     "test": "mocha -r ts-node/register test/*.spec.ts"
   },
   "dependencies": {
+    "awilix": "^4.3.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "env-var": "^7.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.0.2",
@@ -24,7 +26,7 @@
     "hpp": "^0.2.3",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.17",
+    "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -40,26 +42,26 @@
     "@types/express": "^4.17.11",
     "@types/express-mongo-sanitize": "^1.3.2",
     "@types/hpp": "^0.2.1",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mocha": "^8.2.1",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/mocha": "^8.2.2",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.30",
+    "@types/node": "^14.14.37",
     "@types/passport": "^1.0.6",
-    "@types/passport-jwt": "^3.0.4",
+    "@types/passport-jwt": "^3.0.5",
     "@types/passport-local-mongoose": "^4.0.13",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "chai": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "mocha": "^8.3.0",
+    "eslint-plugin-react": "^7.23.1",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.3"
   },
   "repository": {
     "type": "git",
