general configs and types and modules updates

--- a/package.json
+++ b/package.json
@@ -1,70 +1,117 @@
 {
-  "name": "express-jwt-passport-local-mongoose-winston",
-  "version": "1.0.0",
-  "description": "Handling sample authorization in nodejs express server using jwt, passport, mongoose and mongodb",
-  "main": "index.js",
-  "author": "Vladimir Brum",
-  "license": "ISC",
-  "scripts": {
-    "start": "node dist/start.js",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc --project ./",
-    "lint": "eslint . --ext .ts",
-    "test": "mocha -r ts-node/register test/*.spec.ts"
-  },
-  "dependencies": {
-    "awilix": "^4.3.3",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "env-var": "^7.0.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-mongo-sanitize": "^2.0.2",
-    "helmet": "^4.4.1",
-    "helmet-csp": "^3.3.1",
-    "hpp": "^0.2.3",
-    "http-status-codes": "^2.1.4",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3",
-    "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
-    "winston": "^3.3.3"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.2.15",
-    "@types/chai-http": "^4.2.0",
-    "@types/compression": "^1.7.0",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/express-mongo-sanitize": "^1.3.2",
-    "@types/hpp": "^0.2.1",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/mocha": "^8.2.2",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.37",
-    "@types/passport": "^1.0.6",
-    "@types/passport-jwt": "^3.0.5",
-    "@types/passport-local-mongoose": "^4.0.13",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.1",
-    "mocha": "^8.3.2",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Vladimirbr/express-jwt-passport-local-mongoose-winston.git"
-  }
+	"name": "express-jwt-passport-local-mongoose-winston",
+	"version": "1.0.0",
+	"description": "Handling sample authorization in nodejs express server using jwt, passport, mongoose and mongodb",
+	"main": "index.js",
+	"author": "Vladimir Brum",
+	"license": "ISC",
+	"scripts": {
+		"start": "node dist/start.js",
+		"dev": "nodemon src/index.ts",
+		"clean": "rmdir dist /S /Q",
+		"build": "tsc --project ./ --sourceMap false",
+		"bundle": "uglifyjs ./dist/*.js --compress --mangle --output ./dist/index.min.js",
+		"lint": "eslint . --ext .ts",
+		"lint:write": "eslint . --fix --ext .ts",
+		"prettier": "prettier --config .prettierrc.json --write src/**/*.ts",
+		"tdocs": "typedoc --out ./typedocs --exclude **/node_modules/**  ./src --readme ./README.md",
+		"testMocha": "mocha -r ts-node/register test/*.spec.ts",
+		"test": "jest --coverage",
+		"test:watch": "jest --watch",
+		"commit": "git-cz",
+		"changelog": "conventional-changelog -p express -i CHANGELOG.md -s"
+	},
+	"dependencies": {
+		"awilix": "^4.3.3",
+		"celebrate": "^14.0.0",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"env-var": "^7.0.0",
+		"express": "^4.17.1",
+		"express-async-errors": "^3.1.1",
+		"express-mongo-sanitize": "^2.0.2",
+		"helmet": "^4.4.1",
+		"helmet-csp": "^3.3.1",
+		"hpp": "^0.2.3",
+		"http-status-codes": "^2.1.4",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.12.4",
+		"morgan": "^1.10.0",
+		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
+		"passport-local-mongoose": "^6.1.0",
+		"swagger-jsdoc": "^6.0.1",
+		"swagger-ui-express": "^4.1.6",
+		"winston": "^3.3.3"
+	},
+	"devDependencies": {
+		"@types/chai": "^4.2.16",
+		"@types/chai-http": "^4.2.0",
+		"@types/compression": "^1.7.0",
+		"@types/cors": "^2.8.10",
+		"@types/express": "^4.17.11",
+		"@types/express-mongo-sanitize": "^1.3.2",
+		"@types/hpp": "^0.2.1",
+		"@types/jest": "^26.0.22",
+		"@types/jsonwebtoken": "^8.5.1",
+		"@types/mocha": "^8.2.2",
+		"@types/morgan": "^1.9.2",
+		"@types/node": "^14.14.41",
+		"@types/passport": "^1.0.6",
+		"@types/passport-jwt": "^3.0.5",
+		"@types/passport-local-mongoose": "^4.0.13",
+		"@types/swagger-jsdoc": "^6.0.0",
+		"@types/swagger-ui-express": "^4.1.2",
+		"@typescript-eslint/eslint-plugin": "^4.22.0",
+		"@typescript-eslint/parser": "^4.22.0",
+		"chai": "^4.3.4",
+		"chai-http": "^4.3.0",
+		"commitizen": "^4.2.3",
+		"conventional-changelog-cli": "^2.1.1",
+		"cz-conventional-changelog": "^3.3.0",
+		"eslint": "^7.24.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jest": "^24.3.5",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.4.0",
+		"husky": "^6.0.0",
+		"jest": "^26.6.3",
+		"lint-staged": "^10.5.4",
+		"mocha": "^8.3.2",
+		"nodemon": "^2.0.7",
+		"prettier": "^2.2.1",
+		"ts-node": "^9.1.1",
+		"typedoc": "^0.20.35",
+		"typescript": "^4.2.4",
+		"uglifyjs": "^2.4.11"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Vladimirbr/express-jwt-passport-local-mongoose-winston.git"
+	},
+	"engines": {
+		"node": ">=14.16.0",
+		"npm": ">=7.6.3"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+	"jest": {
+		"collectCoverage": true,
+		"collectCoverageFrom": [
+			"src/**/*.ts"
+		],
+		"testEnvironment": "node"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	}
 }
